--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -3,7 +3,6 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
       <p-messages [(value)]="msgs"></p-messages>
-        <div class="card-group">
           <div class="card p-4">
             <div class="card-body">
               <h1>Login</h1>
@@ -24,6 +23,7 @@
                 <div class="row">
                   <div class="col-6">
                     <button type="submit" class="btn btn-primary px-4">Login</button>
+                    <button type="button" class="btn btn-primary px-4" [routerLink]="['/register']">Register Now!</button>
                   </div>
                   <div class="col-6 text-right">
                     <button type="button" class="btn btn-link px-0" [routerLink]="['/recovery_password']">Forgot password?</button>
@@ -32,17 +32,6 @@
               </form>
             </div>
           </div>
-          <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
-            <div class="card-body text-center">
-              <div>
-                <h2>Sign up</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <!-- <button type="button" class="btn btn-primary active mt-3">Register Now!</button> -->
-                <a href="" type="button" class="btn btn-primary active mt-3" [routerLink]="['/register']">Register Now!</a>
-              </div>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
   </div>
