--- a/terraPorta_UI/src/scss/_custom.scss
+++ b/terraPorta_UI/src/scss/_custom.scss
@@ -1,3 +1,13 @@
+/*Card*/
+
+.card {
+  border-radius:50px;
+  border-style:solid;
+  border-width:1px;
+  border-color:#0C9ED1;
+}
+
+/*StartingSCSS*/
 
 .short_text {
   width:200px;
