link style change
btn-link style adjusted

--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -26,7 +26,7 @@
                     <button type="button" class="btn btn-primary px-4" [routerLink]="['/register']">Register Now!</button>
                   </div>
                   <div class="col-6 text-right">
-                    <button type="button" class="btn btn-link px-0" [routerLink]="['/recovery_password']">Forgot password?</button>
+                    <button type="button" class="btn btn-link px-0" [routerLink]="['/recovery_password']">Forgot Password?</button>
                   </div>
                 </div>
               </form>
