--- a/terraPorta_UI/src/scss/_custom.scss
+++ b/terraPorta_UI/src/scss/_custom.scss
@@ -7,6 +7,14 @@
   border-color:#0C9ED1;
 }
 
+/*Text*/
+
+.btn-link {
+  font-family:"Inter UI",sans-serif;
+  font-style:italic bold;
+  color:#0C9ED1;
+}
+
 /*StartingSCSS*/
 
 .short_text {
