--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -5,9 +5,8 @@
       <p-messages [(value)]="msgs"></p-messages>
           <div class="card p-4">
             <div class="card-body">
-              <h1>Login</h1>
+              <h1>Welcome!</h1>
               <form name="loginForm" #loginForm="ngForm" (ngSubmit)="ValidateUser()">
-                <p class="text-muted">Sign In to your account</p>
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
