--- a/terraPorta_UI/src/scss/_custom.scss
+++ b/terraPorta_UI/src/scss/_custom.scss
@@ -15,6 +15,14 @@
   color:#0C9ED1;
 }
 
+h1 {
+  font-family:"Inter UI",sans-serif;
+  font-style:italic bold;
+  color:#707070;
+  font-size:24px;
+  padding-bottom:24px;
+}
+
 /*StartingSCSS*/
 
 .short_text {
