envolope icon added

--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -9,7 +9,7 @@
               <form name="loginForm" #loginForm="ngForm" (ngSubmit)="ValidateUser()">
                 <div class="input-group mb-3">
                   <div class="input-group-prepend">
-                    <span class="input-group-text"><i class="icon-user"></i></span>
+                    <span class="input-group-text"><i class="icon-envelope"></i></span>
                   </div>
                   <input type="text" class="form-control" placeholder="Username" [(ngModel)]='username' [ngModelOptions]="{standalone: true}">
                 </div>
