--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
       <p-messages [(value)]="msgs"></p-messages>
-          <div class="card p-4">
+          <div class="card p-4 login-card">
             <div class="card-body">
               <h1>Welcome!</h1>
               <form name="loginForm" #loginForm="ngForm" (ngSubmit)="ValidateUser()">
