icon form prepend updated

--- a/terraPorta_UI/src/scss/_custom.scss
+++ b/terraPorta_UI/src/scss/_custom.scss
@@ -28,6 +28,13 @@
   max-width:345px;
 }
 
+.input-group-text {
+  border-radius:5rem 0 0 5rem !important;
+  border:none !important;
+  color:white !important;
+  background-color:#97C5D3 !important;
+}
+
 /*Text*/
 
 .btn-link {
