standalone form field edit

--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -11,13 +11,13 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-envelope"></i></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Username" [(ngModel)]='username' [ngModelOptions]="{standalone: true}">
+                  <input type="text" class="standalone form-control" placeholder="Username" [(ngModel)]='username' [ngModelOptions]="{standalone: true}">
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Password" [(ngModel)]='password' [ngModelOptions]="{standalone: true}">
+                  <input type="password" class="standalone form-control" placeholder="Password" [(ngModel)]='password' [ngModelOptions]="{standalone: true}">
                 </div>
                 <div class="row">
                   <div class="col-6">
