testing with particles, we should use typescript

--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -1,3 +1,13 @@
+
+before
+<!-- particles.js container -->
+<div id="particles-js"></div>
+after
+scripts start
+<!-- scripts -->
+<script src="particles.js"></script>
+<script src="app.js"></script>
+scripts end
 <div class="app flex-row align-items-center">
   <div class="container">
     <div class="row justify-content-center">
