--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -3,17 +3,17 @@
     <div class="row justify-content-center">
       <div class="col-md-8">
       <p-messages [(value)]="msgs"></p-messages>
-          <div class="card p-4 login-card">
+          <div class="login-card card-round p-4">
             <div class="card-body">
               <h1>Welcome!</h1>
-              <form name="loginForm" #loginForm="ngForm" (ngSubmit)="ValidateUser()">
-                <div class="input-group mb-3">
+              <form name="loginForm" #loginForm="ngForm" (ngSubmit)="ValidateUser()" class="login-form">
+                <div class="input-group mb-3 btn-login">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-envelope"></i></span>
                   </div>
                   <input type="text" class="standalone form-control" placeholder="Username" [(ngModel)]='username' [ngModelOptions]="{standalone: true}">
                 </div>
-                <div class="input-group mb-4">
+                <div class="input-group mb-4 btn-login">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
@@ -23,10 +23,10 @@
                   <button type="button" class="forgot btn btn-link" [routerLink]="['/recovery_password']">Forgot Password?</button>
                 </div>
                 <div class="row align-items-center">
-                  <button type="submit" class="btn btn-primary btn-rounded btn-block">LOGIN</button>
+                  <button type="submit" class="btn-login btn btn-primary btn-rounded btn-block">LOGIN</button>
                 </div>
                 <div class="row align-items-center">
-                  <button type="button" class="btn btn-outline-primary btn-rounded btn-block" [routerLink]="['/register']">REGISTER</button>
+                  <button type="button" class="btn-login btn btn-outline-primary btn-rounded btn-block" [routerLink]="['/register']">REGISTER</button>
                 </div>
               </form>
             </div>
