--- a/terraPorta_UI/src/app/views/register/register.component.html
+++ b/terraPorta_UI/src/app/views/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <div class="card mx-4">
+        <div class="card-round card mx-4">
           <div class="card-body p-4">
             <h1>Register</h1>
             <p class="text-muted">Create your account and organization</p>
