--- a/terraPorta_UI/src/scss/_custom.scss
+++ b/terraPorta_UI/src/scss/_custom.scss
@@ -32,9 +32,14 @@
   border-color:#5AAE96;
 }
 
+.btn-login {
+  width:340px !important;
+  height:55px !important;
+}
+
 /*Card*/
 
-.card {
+.card-round {
   border-radius:50px;
   border-style:solid;
   border-width:1px;
@@ -43,7 +48,7 @@
 }
 
 .login-card {
-  max-width:400px;
+  width:400px;
 }
 
 .col-md-8 {
@@ -53,6 +58,11 @@
   }
 
 /*Form*/
+
+.login-form {
+  width:350px;
+  position: relative;
+}
 
 .input-group-text {
   border-radius:5rem 0 0 5rem !important;
