--- a/terraPorta_UI/src/app/views/register/register.component.html
+++ b/terraPorta_UI/src/app/views/register/register.component.html
@@ -8,6 +8,7 @@
             <p class="text-muted">Create your account and organization</p>
             <p-messages [(value)]="msgs"></p-messages>
             <form id="register-form" name='RegisterForm' #RegisterForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
+              
               <div class="form-group">
                 <label for="username">Username*</label>
                 <input type="text" class="form-control" id="username" name='username'
@@ -70,7 +71,7 @@
           </div>
           <div class="card-footer p-4">
             <div class="row">
-              <a href="" [routerLink]="['/login']">Already registred? Sign in!</a>
+              <a href="" class="btn btn-link" [routerLink]="['/login']">Already registred? Sign in!</a>
             </div>
           </div>
         </div>
