--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="app flex-row align-items-center">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-auto">
+      <div class="col-md-5">
       <p-messages [(value)]="msgs"></p-messages>
           <div class="card-round p-4">
             <div class="card-body">
