login card background
changed from transparent to white for login form card

--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
       <div class="col-md-5">
       <p-messages [(value)]="msgs"></p-messages>
-          <div class="card-round p-4">
+          <div class="card-round card-white p-4">
             <div class="card-body">
               <h1>Welcome!</h1>
               <form name="loginForm" #loginForm="ngForm" (ngSubmit)="ValidateUser()" class="login-form">
