forgot password button placement
content placement adjustment

--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -19,7 +19,7 @@
                   </div>
                   <input type="password" class="standalone form-control" placeholder="Password" [(ngModel)]='password' [ngModelOptions]="{standalone: true}">
                 </div>
-                <div class="form-inline">
+                <div class="justify-content-end form-inline">
                   <button type="button" class="btn btn-link" [routerLink]="['/recovery_password']">Forgot Password?</button>
                 </div>
                 <div class="form-inline">
