added sign up tag

--- a/terraPorta_UI/src/app/views/login/login.component.html
+++ b/terraPorta_UI/src/app/views/login/login.component.html
@@ -26,6 +26,9 @@
                   <button type="submit" class="btn-login btn btn-primary btn-rounded btn-block">LOGIN</button>
                 </div>
                 <div class="form-inline">
+                  <p class="strike"><span>OR SIGN UP</span></p>
+                </div>
+                <div class="form-inline">
                   <button type="button" class="btn-login btn btn-outline-primary btn-rounded btn-block" [routerLink]="['/register']">REGISTER</button>
                 </div>
               </form>
