--- a/terraPorta_UI/src/app/views/register/register.component.html
+++ b/terraPorta_UI/src/app/views/register/register.component.html
@@ -1,72 +1,64 @@
 <div class="app flex-row align-items-center">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-6">
+      <div class="col-md-8">
         <div class="card-round card mx-4">
           <div class="card-body p-4">
-            <h1>Register</h1>
-            <p class="text-muted">Create your account and organization</p>
+            <h1>Registration</h1>
+
             <p-messages [(value)]="msgs"></p-messages>
             <form id="register-form" name='RegisterForm' #RegisterForm="ngForm" (ngSubmit)="onSubmit()" novalidate>
               
-              <div class="form-group">
-                <label for="username">Username*</label>
-                <input type="text" class="form-control" id="username" name='username'
-                [(ngModel)]="regData.username" #username="ngModel" required>
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" id="username" name='username' placeholder="Username*"
+                  [(ngModel)]="regData.username" #username="ngModel" required>
+                </div>
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" id="email" name='email' placeholder="Email*"
+                  [(ngModel)]="regData.email" #email="ngModel" required>
+                </div>
               </div>
 
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <label for="first_name">First Name</label>
-                  <input type="text" class="form-control" id="first_name" name='first_name'
+                  <input type="text" class="form-control" id="first_name" name='first_name' placeholder="First Name"
                   [(ngModel)]="regData.first_name" #first_name="ngModel">
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="last_name">Last Name</label>
-                  <input type="text" class="form-control" id="last_name" name='last_name'
-                  [(ngModel)]='regData.last_name' #last_name='ngModel'>
+                  <input type="text" class="form-control" id="last_name" name='last_name' placeholder="Last Name"
+                  [(ngModel)]="regData.last_name" #last_name="ngModel">
                 </div>
-              </div>
-
-              <div class="form-group">
-                <label for="email">Email*</label>
-                <input type="text" class="form-control" id="email" name="email"
-                [(ngModel)]='regData.email' required #email='ngModel'>
-              </div>
-
-              <div class="form-group">
-                <label for="password">Password*</label>
-                <input type="password" class="form-control" id="password" name="password"
-                [(ngModel)]='regData.password' required>
-              </div>
-
-              <div class="form-group">
-                <label for="r_password">Repeat password*</label>
-                <input type="password" class="form-control" id="r_password" name="r_password"
-                [(ngModel)]='regData.r_password' required>
-              </div>
-
-              <div class="form-group">
-                <label for="name">Organization name*</label>
-                <input type="text" class="form-control" id="name" [(ngModel)]="regData.org.name" name="name"
-                #name="ngModel" required>
               </div>
 
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <label for="location">Organization Location</label>
-                  <input type="text" class="form-control" id="location" name="location"
-                  [(ngModel)]='regData.org.location' #location='ngModel'>
+                  <input type="password" class="form-control" id="password" name='password' placeholder="Password*"
+                  [(ngModel)]="regData.password" required>
                 </div>
                 <div class="form-group col-md-6">
-                  <label for="state">Organization State</label>
-                  <input type="text" class="form-control" id="state" name="state"
-                  [(ngModel)]='regData.org.state' #state='ngModel'>
-
+                  <input type="password" class="form-control" id="r_password" name='r_password' placeholder="Repeat Password*"
+                  [(ngModel)]="regData.r_password" required>
                 </div>
               </div>
 
-            <button type="submit" class="btn btn-block btn-success" [disabled]="!RegisterForm.form.valid || RegisterForm.form.pristine">Create Account</button>
+              <div class="form-group">
+                <input type="text" class="form-control" id="name" name='name' placeholder="Organization Name*"
+                [(ngModel)]="regData.org.state" required>
+              </div>
+
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" id="location" name='location' placeholder="Organization Location"
+                  [(ngModel)]="regData.org.location" #location='ngModel'>
+                </div>
+                <div class="form-group col-md-6">
+                  <input type="text" class="form-control" id="state" name='state' placeholder="Organization State"
+                  [(ngModel)]="regData.org.state" #state="ngModel">
+                </div>
+              </div>
+
+            <button type="submit" class="btn btn-block btn-success" [disabled]="!RegisterForm.form.valid || RegisterForm.form.pristine">CREATE ACCOUNT</button>
             </form>
           </div>
           <div class="card-footer p-4">
