--- a/terraPorta_UI/src/app/views/register/register.component.html
+++ b/terraPorta_UI/src/app/views/register/register.component.html
@@ -58,14 +58,24 @@
                 </div>
               </div>
 
-            <button type="submit" class="btn btn-block btn-success" [disabled]="!RegisterForm.form.valid || RegisterForm.form.pristine">CREATE ACCOUNT</button>
+              <div class="form-row"> 
+                <div class="col-md-6"></div>
+                <div class="justify-content-end form-inline col-md-6">
+                   <a href="" class="btn btn-link" [routerLink]="['/login']">Already registred? Sign in!</a>
+                </div>
+              </div>
+
+              <div class="form-row">
+                <div class="col-md-6"></div>
+                <div class="justify-content-end form-inline col-md-6">
+                  <button type="submit" class="btn-login btn btn-primary btn-rounded btn-block" [disabled]="!RegisterForm.form.valid || RegisterForm.form.pristine">CREATE ACCOUNT</button>
+                </div>
+              </div>
+
             </form>
           </div>
-          <div class="card-footer p-4">
-            <div class="row">
-              <a href="" class="btn btn-link" [routerLink]="['/login']">Already registred? Sign in!</a>
-            </div>
-          </div>
+
+
         </div>
       </div>
     </div>
