--- a/terraPorta_UI/src/scss/_custom.scss
+++ b/terraPorta_UI/src/scss/_custom.scss
@@ -70,6 +70,12 @@
   padding:.90rem .90rem .90rem .90rem !important;
 }
 
+.registration {
+  border-radius:5rem !important;
+  border-color:#97C5D3 !important;
+  background-color:white !important;
+}
+
 .standalone {
   border-radius:0 5rem 5rem 0 !important;
   border:none !important;
