--- a/terraPorta_UI/src/scss/_custom.scss
+++ b/terraPorta_UI/src/scss/_custom.scss
@@ -70,6 +70,19 @@
   padding:.90rem .90rem .90rem .90rem !important;
 }
 
+.btn-right-round {
+  border-radius: 0 5rem 5rem 0 !important;
+  border-color:#046BB2;
+  background-color:#046BB2;
+  color:white;
+}
+
+.input-left-round {
+  border-radius: 5rem 0 0 5rem !important;
+  border-color: #046BB2;
+  padding: 10px;
+}
+
 .registration {
   border-radius:5rem !important;
   border-color:#97C5D3 !important;
