register component fix

--- a/terraPorta_UI/src/app/views/register/register.component.html
+++ b/terraPorta_UI/src/app/views/register/register.component.html
@@ -44,7 +44,7 @@
 
               <div class="form-group">
                 <input type="text" class="form-control registration" id="name" name='name' placeholder="Organization Name*"
-                [(ngModel)]="regData.org.state" required>
+                [(ngModel)]="regData.org.name" required>
               </div>
 
               <div class="form-row">
